# RequestDispatcher

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  libs.cmake  test-libs.cmake  variables.cmake
example/: CMakeLists.txt  simple.cpp
include/request_dispatcher/: request_dispatcher.hpp
source/: request_dispatcher.cpp
test/: CMakeLists.txt
test/source/: request_dispatcher_test.cpp
